# CQU_BYSJ

./: .env.example  .gitignore  CLAUDE.md  Design.md  PROJECT_STRUCTURE.md  README-DOCKER.md  README.md  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  improve.md
backend/: .env.example  Dockerfile  Dockerfile.inference  Dockerfile.render  README.md  alembic.ini  inference_main.py  main.py  package-lock.json  pyproject.toml  render_main.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 3bdbc91b66d2_initial_migration_create_all_tables.py  a5c_alerts_feedback_density_defaults.py  e7dda82d070c_extend_file_id_length_to_50.py  f24_add_render_config_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  alerts.py  config.py  deps.py  feedback.py  files.py  history.py  roi_templates.py  rois.py  router.py  streams.py  websockets.py
backend/app/core/: __init__.py  config.py  database.py  logger.py  logging.py  redis.py
backend/app/models/: __init__.py  alert.py  alert_config.py  cross_line.py  export_task.py  region.py  stats_aggregated.py  video_source.py
backend/app/repositories/: __init__.py  alert_config_repository.py  alert_repository.py  cross_line_repository.py  export_task_repository.py  region_repository.py  stats_repository.py  video_source_repository.py
backend/app/schemas/: __init__.py  alert.py  analysis.py  common.py  cross_line.py  detection.py  export.py  feedback.py  file.py  history.py  history_stat.py  region.py  roi.py  status.py  system_config.py  video_source.py  video_stream.py  websocket.py
backend/app/services/: __init__.py  alert_service.py  density.py  detector.py  file_storage_service.py  gateway_adapter.py  heatmap_generator.py  history_storage_service.py  inference_control.py  inference_service.py  inference_worker.py  reconnection_service.py  render_control.py  render_worker.py  result_push_service.py  roi_calculator.py  roi_template_service.py  status_push_service.py  stream_service.py  video.py
backend/app/utils/: __init__.py  helpers.py
backend/data/: app.db
backend/scripts/: db_init.py  demo_inference.py  migrate_add_area_physical.py  poc_render_pipeline.py
backend/tests/: conftest.py  test_alembic_config.py  test_checkpoint_verification.py  test_density_properties.py  test_heatmap_properties.py  test_history_properties.py  test_inference_properties.py  test_integration_concurrent.py  test_integration_e2e.py  test_math.py  test_render_performance.py  test_render_status_push.py  test_render_stream_behavior.py  test_render_worker_unit.py  test_roi_api.py  test_roi_properties.py  test_stream_api_properties.py  test_system_config_properties.py  test_video_stream_properties.py
(+294 files in other folders)
